<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RMA_LV2</string>
    <string name="action_settings">Settings</string>
    <string name="length">Length</string>
    <string name="angle">Angle</string>
    <string name="temperature">Temperature</string>
    <string name="power">Power</string>
    <string name="conversion_message">%s Conversion</string>
    <string name="convert">Convert</string>
    <string name="hint">Insert value</string>
    <string name="from_unit_description">Unit to convert from</string>
    <string name="to_unit_description">Unit to convert to</string>
    <string name="input_instruction">Enter value and select unit</string>
    <string name="select_result_unit_instruction">Select unit to convert to</string>
    <string name="format_exception">Input format not recognized</string>
</resources>