<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="3"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/powerIcon"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:contentDescription="@string/power"
        android:onClick="onClick"
        android:src="@drawable/engine" />

    <ImageView
        android:id="@+id/angleIcon"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:contentDescription="@string/angle"
        android:onClick="onClick"
        android:src="@drawable/angle" />

    <ImageView
        android:id="@+id/temperatureIcon"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:contentDescription="@string/temperature"
        android:onClick="onClick"
        android:src="@drawable/thermometer" />

    <ImageView
        android:id="@+id/sizeIcon"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:contentDescription="@string/length"
        android:onClick="onClick"
        android:src="@drawable/size" />

</GridLayout>